# FastAPI-base-Template

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
fastapi_app/: main.py
fastapi_app/alembic/: env.py
fastapi_app/alembic/versions/: 2025_05_20_2003-c1edb993f28d_initial_commit.py  2025_05_28_2233-fefe835965e1_fix_changing_user_hashed_password_from_.py  2025_05_28_2259-26cba581500c_fix_add_id_to_tokens_table.py  2025_05_28_2354-5e15975b8c5b_initial_commit.py  2025_05_29_0013-22349abb947f_token_add_expire_at_column.py
fastapi_app/api/: __init__.py
fastapi_app/api/v1/: __init__.py
fastapi_app/api/v1/auth/: auth.py
fastapi_app/api/v1/auth/dependencies/: auth_dependencies.py
fastapi_app/core/: database.py  settings.py
fastapi_app/models/: __init__.py  base.py  tokens.py  users.py
fastapi_app/repos/: base.py  token.py  user.py
fastapi_app/schemas/: auth.py  tokens.py
fastapi_app/services/auth/: auth.py  token.py
fastapi_app/utils/: case_converter.py
